// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FlagsModal renders 1`] = `
<DocumentFragment>
  <div
    class="modal-backdrop fade"
  />
  <div
    class="fade modal d-block"
  >
    <div
      class="modal-md"
      style="margin: auto;"
    >
      <div
        class="modal-dialog modal-md"
        tabindex="-1"
      >
        <div
          class="modal-content"
        >
          <div
            class="modal-header"
          >
            <div
              class="modal-title"
            >
              report-inappropriate-content
            </div>
            <button
              aria-label="close"
              class="close btn btn-unstyled"
              type="button"
            >
              <svg
                class="lexicon-icon lexicon-icon-times"
                role="presentation"
              >
                <use
                  xlink:href="#times"
                />
              </svg>
            </button>
          </div>
          <form>
            <div
              class="modal-body"
            >
              <p>
                you-are-about-to-report-a-violation-of-our-x.-all-reports-are-strictly-confidential
              </p>
              <div
                class="form-group"
              >
                <label
                  class="control-label"
                  for="selectedReason"
                >
                  reason-for-the-report
                </label>
                <select
                  class="form-control"
                  id="selectedReason"
                  name="selectedReason"
                >
                  <option
                    value="value"
                  >
                    text
                  </option>
                  <option
                    value="value2"
                  >
                    text2
                  </option>
                  <option
                    value="other"
                  >
                    other-reason
                  </option>
                </select>
              </div>
            </div>
            <div
              class="modal-footer"
            >
              <div
                class="modal-item-first"
              />
              <div
                class="modal-item"
              />
              <div
                class="modal-item-last"
              >
                <div
                  class="btn-group"
                  role="group"
                >
                  <div
                    class="btn-group-item"
                  >
                    <button
                      class="btn btn-secondary"
                      type="button"
                    >
                      cancel
                    </button>
                  </div>
                  <div
                    class="btn-group-item"
                  >
                    <button
                      class="btn btn-primary"
                      type="submit"
                    >
                      report
                    </button>
                  </div>
                </div>
              </div>
            </div>
          </form>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`FlagsModal renders error 1`] = `
<DocumentFragment>
  <div
    class="modal-backdrop fade"
  />
  <div
    class="fade modal d-block"
  >
    <div
      class="modal-md"
      style="margin: auto;"
    >
      <div
        class="modal-dialog modal-md"
        tabindex="-1"
      >
        <div
          class="modal-content"
        >
          <div
            class="modal-header"
          >
            <div
              class="modal-title"
            >
              report-inappropriate-content
            </div>
            <button
              aria-label="close"
              class="close btn btn-unstyled"
              type="button"
            >
              <svg
                class="lexicon-icon lexicon-icon-times"
                role="presentation"
              >
                <use
                  xlink:href="#times"
                />
              </svg>
            </button>
          </div>
          <div
            class="modal-body"
          >
            <p>
              <strong>
                an-error-occurred-while-sending-the-report.-please-try-again-in-a-few-minutes
              </strong>
            </p>
          </div>
          <div
            class="modal-footer"
          >
            <div
              class="modal-item-first"
            />
            <div
              class="modal-item"
            />
            <div
              class="modal-item-last"
            >
              <button
                class="btn btn-secondary"
                type="button"
              >
                close
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`FlagsModal renders login 1`] = `
<DocumentFragment>
  <div
    class="modal-backdrop fade"
  />
  <div
    class="fade modal d-block"
  >
    <div
      class="modal-md"
      style="margin: auto;"
    >
      <div
        class="modal-dialog modal-md"
        tabindex="-1"
      >
        <div
          class="modal-content"
        >
          <div
            class="modal-header"
          >
            <div
              class="modal-title"
            >
              report-inappropriate-content
            </div>
            <button
              aria-label="close"
              class="close btn btn-unstyled"
              type="button"
            >
              <svg
                class="lexicon-icon lexicon-icon-times"
                role="presentation"
              >
                <use
                  xlink:href="#times"
                />
              </svg>
            </button>
          </div>
          <div
            class="modal-body"
          >
            <p>
              <strong>
                please-sign-in-to-flag-this-as-inappropriate
              </strong>
            </p>
          </div>
          <div
            class="modal-footer"
          >
            <div
              class="modal-item-first"
            />
            <div
              class="modal-item"
            />
            <div
              class="modal-item-last"
            >
              <button
                class="btn btn-secondary"
                type="button"
              >
                close
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`FlagsModal renders success 1`] = `
<DocumentFragment>
  <div
    class="modal-backdrop fade"
  />
  <div
    class="fade modal d-block"
  >
    <div
      class="modal-md"
      style="margin: auto;"
    >
      <div
        class="modal-dialog modal-md"
        tabindex="-1"
      >
        <div
          class="modal-content"
        >
          <div
            class="modal-header"
          >
            <div
              class="modal-title"
            >
              report-inappropriate-content
            </div>
            <button
              aria-label="close"
              class="close btn btn-unstyled"
              type="button"
            >
              <svg
                class="lexicon-icon lexicon-icon-times"
                role="presentation"
              >
                <use
                  xlink:href="#times"
                />
              </svg>
            </button>
          </div>
          <div
            class="modal-body"
          >
            <p>
              <strong>
                thank-you-for-your-report
              </strong>
            </p>
            <p>
              although-we-cannot-disclose-our-final-decision,-we-do-review-every-report-and-appreciate-your-effort-to-make-sure-x-is-a-safe-environment-for-everyone
            </p>
          </div>
          <div
            class="modal-footer"
          >
            <div
              class="modal-item-first"
            />
            <div
              class="modal-item"
            />
            <div
              class="modal-item-last"
            >
              <button
                class="btn btn-secondary"
                type="button"
              >
                close
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
